--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/ChandanSitlani/node_test/issues"
   },
-  "homepage": "https://github.com/ChandanSitlani/node_test#readme"
+  "homepage": "https://github.com/ChandanSitlani/node_test#readme",
+  "dependencies": {
+    "ejs": "^2.6.2"
+  }
 }
