--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ChandanSitlani/node_test#readme",
   "dependencies": {
-    "ejs": "^2.6.2"
+    "ejs": "^2.6.2",
+    "express": "^4.17.1"
   }
 }
